[gd_scene load_steps=10 format=3 uid="uid://r3gttedegtul"]

[ext_resource type="Script" uid="uid://dk4ba18a4447l" path="res://Scripts/slime.gd" id="1_aiwxb"]
[ext_resource type="Texture2D" uid="uid://bns488htk5ui8" path="res://Assets/sprites/slime_purple.png" id="2_paq7w"]
[ext_resource type="PackedScene" uid="uid://cs2y2emdn76xk" path="res://Scenes/killzone.tscn" id="3_f4si1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5gljc"]
atlas = ExtResource("2_paq7w")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblni"]
atlas = ExtResource("2_paq7w")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e388w"]
atlas = ExtResource("2_paq7w")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4o34"]
atlas = ExtResource("2_paq7w")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_y26kt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e388w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4o34")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7ij5"]
size = Vector2(12, 13)

[node name="Slime" type="Node2D"]
z_index = 1
script = ExtResource("1_aiwxb")
speed = 40

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_y26kt")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.57440615

[node name="Killzone" parent="." instance=ExtResource("3_f4si1")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_c7ij5")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(0, 13)
